  * When parsing environment variable, distinguish between empty and undefined.
  * Allow for flags (i.e. "--verbose") to accept "true" and "false".
  * Added '=', '.', and '/' to the list of characters not requiring escaping.
  * Added coverage tests for new code (validators, variables, etc.)
  * Applied some fixes to the variables implementation so errors work.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 26 May 2022 21:42:41 -0700

advgetopt (2.0.37.1~bionic) bionic; urgency=high

  * Added two echos around the atomic program to test a crash on launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 21 May 2022 21:46:36 -0700

advgetopt (2.0.37.0~bionic) bionic; urgency=high

  * The first find_program() of atomic-names must not be REQUIRED.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 21 May 2022 11:05:50 -0700

advgetopt (2.0.36.0~bionic) bionic; urgency=high

  * Added atomic-names tool to -dev package.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 21 May 2022 08:16:46 -0700

advgetopt (2.0.35.1~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 20 May 2022 12:57:33 -0700

advgetopt (2.0.35.0~bionic) bionic; urgency=high

  * Added tool/cmake rule to automatically generate Atomic Names.
  * Added a exists() function for configuration files.
  * Fixes to the CMakeLists.txt files.
  * Removed one more dependency on boost.
  * Updated the compat file to v10.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 12 Mar 2022 10:35:31 -0800

advgetopt (2.0.34.0~bionic) bionic; urgency=high

  * Fixed the variables that are not set when having REQUIRE.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 06 Mar 2022 11:21:14 -0800

advgetopt (2.0.33.0~bionic) bionic; urgency=high

  * Fixed the loop through options making it a reference.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 05 Mar 2022 23:12:37 -0800

advgetopt (2.0.32.0~bionic) bionic; urgency=high
