@@ -7,6 +7,8 @@ advgetopt (2.0.38.0~bionic) bionic; urgency=high
   * Added '=', '.', and '/' to the list of characters not requiring escaping.
   * Added coverage tests for new code (validators, variables, etc.)
   * Applied some fixes to the variables implementation so errors work.
+  * Fixed the search of the atomic-names tool when building coverage.
+  * Also generate a fatal error if we can't find the tool at all.
 
  -- Alexis Wilke <alexis@m2osw.com>  Thu, 26 May 2022 21:42:41 -0700
 
